- Update to latest release.

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,3 +1,3 @@
 sources:
-  "biblatex-caspervector.doc.tar.xz:"	cdd1e89a704090e849e403e95eeae657a91cc170
-  "biblatex-caspervector.tar.xz:"	121f68ca30a6902fbeae5b4ddc1bbd759a75bce7
+  biblatex-caspervector.doc.tar.xz: f525496cdf12d794d03452f998b67b0f4b86a811
+  biblatex-caspervector.tar.xz: 0aa0409c1f9580833a70231ee90e3e089d5030eb
